--- a/assets/css/css2/style_project.css
+++ b/assets/css/css2/style_project.css
@@ -62,6 +62,7 @@ a.item_project {
     background-color: aliceblue;
     height: 200px;
     display: flex;
+    overflow: hidden;
 }
 
 img.preview {
@@ -69,6 +70,15 @@ img.preview {
     /* border-radius: 10px;
     border: 2px double rgb(235, 28, 231);
     box-shadow: rgba(255, 83, 3, 0.842) 0px 5px 15px; */
+}
+img.preview:hover{
+    width: 320px;
+    /* border-radius: 10px;
+    border: 2px double rgb(235, 28, 231);
+    box-shadow: rgba(255, 83, 3, 0.842) 0px 5px 15px; */
+}
+.content_project {
+    
 }
 
 
