--- a/assets/css/css2/style_project.css
+++ b/assets/css/css2/style_project.css
@@ -4,6 +4,9 @@ body {
     overflow-y: auto !important;
 }
 
+ion-icon {
+    margin-right: 8px;
+}
 .main {
     min-height: 90vh;
 }
@@ -57,94 +60,146 @@ ul.contacts li ion-icon {
     padding: 10px;
 }
 
-a.item_project {
+
+/* Chung */
+div.item_project {
     width: 100%;
     background-color: aliceblue;
     height: 200px;
     display: flex;
+    border-radius: 8px;
+    /* overflow: hidden; */
+    margin: 0px 0 30px 0;
+    position: relative;
+}
+div.item_project:hover {
+    transform: scale(1.009);
+    transition: .3s ease-in-out;
+}
+div.item_project:hover img.preview {
+    transform: scale(1.07);
+    transition: .3s ease-in-out;
+}
+
+.div_for_img {
+    height: 100%;
+    width: 40%;
+    background-color: blueviolet;
+    border-radius: 8px 0px 0px 8px;
+    overflow: hidden;
+}
+.div_for_img_ {
+    height: 100%;
+    width: 40%;
+    background-color: blueviolet;
+    border-radius: 0px 8px 8px 0px;
     overflow: hidden;
 }
 
-img.preview {
-    width: 300px;
-    /* border-radius: 10px;
-    border: 2px double rgb(235, 28, 231);
-    box-shadow: rgba(255, 83, 3, 0.842) 0px 5px 15px; */
-}
-img.preview:hover{
-    width: 320px;
-    /* border-radius: 10px;
-    border: 2px double rgb(235, 28, 231);
-    box-shadow: rgba(255, 83, 3, 0.842) 0px 5px 15px; */
-}
 .content_project {
-    
+    height: 100%;
+    width: 60%;
 }
 
+img.preview {
+    height: 100%;
+    /* border-radius: 10px;
+    border: 2px double rgb(235, 28, 231);
+    box-shadow: rgba(255, 83, 3, 0.842) 0px 5px 15px; */
+}
+/* img.preview:hover {
+    transform: scale(1.1);
+    transition: .3s ease-in-out;
+    border-radius: 10px;
+    border: 2px double rgb(235, 28, 231);
+    box-shadow: rgba(255, 83, 3, 0.842) 0px 5px 15px;
+} */
+.content_project {
+    padding: 18px;
+    color: black;
+}
 
+.top_content {
+    display: flex;
+    justify-content: flex-end;
+}
+.tittle_project {
+    display: flex;
+    flex-direction: column;
+}
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* .div_link {
-    width: 100%;
-    height: 98%;
+.first_update, .collection, .kjww_amw, .mawh {
     display: flex;
     justify-content: center;
     align-items: center;
-    opacity: 1;
-    background-color: rgba(0, 0, 0, 0);
-    border-radius: 10px;
+}
+.first_update {
+    margin-right: 10px;
+}
 
+.value_tittle {
+    font-size: 20px;
+    font-weight: bold;
+    text-transform: uppercase;
+    margin: 10px 0 10px 0;
+}
+
+.kjww_amw {
+    margin-top: 10px;
+}
+.kjww_amw ion-icon {
+    margin-right: 5px;
+}
+.wiuk_language {
+    display: flex;
+    justify-content: center;
+}
+/* .wkuj_wiue {
+    margin-right: 10px;
+} */
+
+.mawh {
+    padding: 4px 7px;
+    border-radius: 4px;
+}
+.mawh:hover {
+    background-color: #ffbbf4;
+}
+
+
+
+
+
+.more_information_project {
+    background: linear-gradient(120deg,#9abbf7 0,#ffbbf4 100%);
+    border: 0;
+    border-radius: 14px 0;
+    bottom: -5px;
+    box-shadow: 2px 2px 10px 0 #ffbbf47a;
+    color: #fff;
+    font-size: 14px;
+    font-weight: 700;
+    padding: 10px 8px 10px 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
     position: absolute;
-    top: 0;
-    left: 0;
-} */
+    right: -5px;
+    bottom: -10px;
+    transition: box-shadow .25s ease-out, right .25s ease-out;
+}
+.more_information_project_ {
+    position: absolute;
+    left: -10px;
+    right: unset;
+    bottom: -10px;
+    border-radius: 0px 14px;
+}
 
-/* .div_link:hover {
-    background-color: rgba(0, 0, 0, 0.345);
-    opacity: 1;
-} */
+/* So le */
+.top_content_ {
+    display: flex;
+    justify-content: flex-start;
+}
 
-/* .item_project:nth-child(1) {
-    display: none;
-} */
-
-/* a.link_project {
-    background-color: rgb(251, 251, 251);
-    text-decoration: none;
-    text-align: center;
-    color: black;
-    padding: 10px;
-    border-radius: 20px;
-    font-weight: bold;
-} */
-/* a.link_project:hover {
-    transform: scale(1.1);
-    transition: .5s ease-in;
-    background-image: linear-gradient(45deg, rgba(246, 0, 250, 0.63) 28%, rgba(0, 238, 255, 0.78) 100%);
-} */
