--- a/assets/css/css2/style_project.css
+++ b/assets/css/css2/style_project.css
@@ -32,16 +32,22 @@ span.title {
 }
 
 .project {
-    width: 100vw;
+    width: 1160px;
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     padding: 10px;
 }
 .card_profile {
-    background-color: aliceblue;
+    background-color: rgb(84, 84, 85);
     width: 300px;
     display: flex;
     flex-direction: column;
+    align-items: center;
+    padding: 20px 0px;
+    border-radius: 8px;
+}
+.aklj_jqhw {
+    width: 170px;
 }
 /* ul.contacts li {
 } */
@@ -56,8 +62,6 @@ ul.contacts li ion-icon {
     width: 700px;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    padding: 10px;
 }
 
 
@@ -68,7 +72,6 @@ div.item_project {
     height: 200px;
     display: flex;
     border-radius: 8px;
-    /* overflow: hidden; */
     margin: 0px 0 30px 0;
     position: relative;
 }
@@ -97,23 +100,15 @@ div.item_project:hover img.preview {
 }
 
 .content_project {
-    height: 100%;
+    /* height: 100%; */
     width: 60%;
+    font-size: 16px;
 }
 
 img.preview {
     height: 100%;
-    /* border-radius: 10px;
-    border: 2px double rgb(235, 28, 231);
-    box-shadow: rgba(255, 83, 3, 0.842) 0px 5px 15px; */
 }
-/* img.preview:hover {
-    transform: scale(1.1);
-    transition: .3s ease-in-out;
-    border-radius: 10px;
-    border: 2px double rgb(235, 28, 231);
-    box-shadow: rgba(255, 83, 3, 0.842) 0px 5px 15px;
-} */
+
 .content_project {
     padding: 18px;
     color: black;
