--- a/assets/css/css2/style_project.css
+++ b/assets/css/css2/style_project.css
@@ -42,21 +42,46 @@ span.title {
     width: 300px;
     display: flex;
     flex-direction: column;
+    justify-content: center;
     align-items: center;
     padding: 20px 0px;
     border-radius: 8px;
+
+    position: sticky;
+    top: 100px;
+}
+.author_name {
+    font-size: 30px;
+    margin: 10px 0 10px 0;
 }
 .aklj_jqhw {
-    width: 170px;
+    width: 150px;
+    border-radius: 50%;
+    box-shadow: rgba(188, 25, 221, 0.781) 0px 10px 20px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
-/* ul.contacts li {
-} */
-ul.contacts li a {
-    color: black;
+
+ul.contacts  {
+    padding-left: 0px;
+}
+
+ul.contacts li {
     display: flex;
+    /* margin-bottom: 10px; */
+    padding: 10px 14px;
+    border-radius: 4px;
 }
+ul.contacts li:hover {
+    background-color: rgba(240, 255, 255, 0.205);
+}
+
+ul.contacts li a {
+    color: rgb(245, 238, 238);
+    display: flex;
+    align-items: center;
+}
+
 ul.contacts li ion-icon {
-    font-size: 50px;
+    font-size: 35px;
 }
 .list_project {
     width: 700px;
