--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,31 +12,6 @@ html {
   font-family: "Tinos", serif !important;
 }
 
-/* .tinos-regular {
-  font-family: "Tinos", serif;
-  font-weight: 400;
-  font-style: normal;
-}
-
-.tinos-bold {
-  font-family: "Tinos", serif;
-  font-weight: 700;
-  font-style: normal;
-}
-
-.tinos-regular-italic {
-  font-family: "Tinos", serif;
-  font-weight: 400;
-  font-style: italic;
-}
-
-.tinos-bold-italic {
-  font-family: "Tinos", serif;
-  font-weight: 700;
-  font-style: italic;
-} */
-
-
 body {
   background-color: var(--black);
   display: block;
@@ -45,6 +20,10 @@ body {
   
   overflow: hidden;
   position: relative;
+}
+
+::-webkit-scrollbar {
+  width: 0px;
 }
 
 .main{
@@ -71,6 +50,7 @@ ul, li {
 }
 a {
   text-decoration: none;
+  color: black;
 }
 
 /*______________ [ light-mode ] _____________________________________________________________________*/
