--- a/assets/css/css2/style_project.css
+++ b/assets/css/css2/style_project.css
@@ -47,6 +47,7 @@ span.title {
     align-items: center;
     padding: 20px 0px;
     border-radius: 8px;
+    box-shadow: rgba(236, 69, 181, 0.568) 0px 14px 28px, rgba(221, 81, 81, 0.664) 0px 10px 10px;
 
     position: sticky;
     top: 100px;
@@ -197,7 +198,6 @@ img.preview {
     background: linear-gradient(120deg,#9abbf7 0,#ffbbf4 100%);
     border: 0;
     border-radius: 14px 0;
-    bottom: -5px;
     box-shadow: 2px 2px 10px 0 #ffbbf47a;
     color: #fff;
     font-size: 14px;
@@ -209,14 +209,14 @@ img.preview {
 
     position: absolute;
     right: -5px;
-    bottom: -10px;
+    bottom: -5px;
     transition: box-shadow .25s ease-out, right .25s ease-out;
 }
 .more_information_project_ {
     position: absolute;
     left: -10px;
     right: unset;
-    bottom: -10px;
+    bottom: -5px;
     border-radius: 0px 14px;
 }
 
