--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -126,15 +126,6 @@
   margin: 0;
 }
 
-/* _______________________________________________[ Dark/Light Button ]_________________________ */
-.toggle-btn {
-  position: relative;
-  width: 72.5px; 
-  height: 37px; 
-  margin: 0 auto;
-  border-radius: 20px; 
-  transform: scale(0.5); 
-}
 
 input[type="checkbox"] {
   width: 100%;
@@ -150,61 +141,6 @@ input[type="checkbox"] {
   z-index: 2;
 }
 
-._1st-toggle-btn span {
-  position: absolute;
-  top: 0px;
-  right: 0px;
-  bottom: 0px;
-  left: 0px;
-  overflow: hidden;
-  opacity: 1;
-  background-color: #000000;
-  box-shadow: 0px 1px 12.5px #02e1ff; 
-  border-radius: 20px; 
-  transition: 0.2s ease background-color, 0.2s ease opacity;
-}
-
-._1st-toggle-btn span:before,
-._1st-toggle-btn span:after {
-  content: "";
-  position: absolute;
-  top: 4px; 
-  width: 29px; 
-  height: 29px; 
-  border-radius: 50%;
-  transition: 0.5s ease transform, 0.2s ease background-color;
-}
-
-._1st-toggle-btn span:before {
-  background-color: #000000;
-  transform: translate(-29px, 0px); 
-  z-index: 1;
-}
-
-._1st-toggle-btn span:after {
-  background-color: #ffffff;
-  transform: translate(4px, 0px); 
-  z-index: 0;
-}
-
-._1st-toggle-btn input[type="checkbox"]:checked + span {
-  background-color: #ffffff;
-}
-
-._1st-toggle-btn input[type="checkbox"]:active + span {
-  opacity: 0.5;
-}
-
-._1st-toggle-btn input[type="checkbox"]:checked + span:before {
-  background-color: #ffffff;
-  transform: translate(28px, -9.5px); 
-}
-
-._1st-toggle-btn input[type="checkbox"]:checked + span:after {
-  background-color: #000000;
-  transform: translate(39.5px, 0px); 
-}
-
 
 /*__________________ [ Light-mode ] _________________________________________________________________*/
 .light-mode .navbar-header-logo a,
@@ -212,6 +148,18 @@ input[type="checkbox"] {
 .light-mode .menu-toggle {
   color: var(--black);
 }
+
+
+.limenuRight a {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.limenuRight a ion-icon {
+  margin-right: 5px;
+}
+
 
 /*____________________________________________ [ Responsive styles ] ____________________*/
 @media (max-width: 769px) {
