--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -16,24 +16,31 @@
   align-items: center;
   justify-content: center;
   border-bottom: 1px solid rgba(0, 0, 0, 0.142);
-
+  
   position: fixed !important;
-  top: 0;
+  top: 20px;
   left: 0;
   z-index: 99;
 }
 
 .navbar {
-  padding-left: 10px;
-  padding-right: 10px;
+  background-color: rgba(240, 248, 255, 0.123);
+  /* padding-left: 10px;
+  padding-right: 10px; */
+  padding: 5px;
   display: flex;
-  justify-content: space-between;
+  border-radius: 10px;
+  /* justify-content: space-between; */
   align-items: center;
   height: 100%;
   max-width: 1229px;
   width: 170vh;
-
   z-index:99;
+}
+
+.logo-image {
+  width: 50px;
+  border-radius: 10px;
 }
 
 .navbar-header-logo a {
@@ -50,8 +57,6 @@
 .menu-navbar-right {
   display: flex;
   align-items: center;
-
-  /* width: 400px; */
   z-index: 100;
 }
 
@@ -69,65 +74,19 @@
   padding-left: 4px;
   padding-right: 4px;
 }
-.list li:nth-child(1) {
-  display: none;
-}
-
-.list li:nth-child(2),
-.list li:nth-child(3),
-.list li:nth-child(4),
-.list li:nth-child(5) {
-  margin-top: 7px;
-  position: relative;
-}
 
 .list li a {
-  margin-top: 10px;
   text-decoration: none;
   color: var(--white);
+  display: flex;
+  justify-content: center;
+  font-size: 18px;
+}
+.list li a ion-icon {
+  margin-right: 5px;
 }
 
-.list li a:hover, .navbar-header-logo a:hover {
-  color: var(--trueWhite);
-}
-
-/* .list li:nth-child(1):hover::after,
-.list li:nth-child(2):hover::after,
-.list li:nth-child(3):hover::after,
-.list li:nth-child(4):hover::after,
-.list li:nth-child(5):hover::after {
-  content: "";
-  position: absolute;
-  top: -2px;
-  left: -7px;
-  width: 7px;
-  height: 7px;
-  border-top: 3px solid var(--green);
-  border-left: 3px solid var(--green);
-}
-
-.list li:nth-child(1):hover::before,
-.list li:nth-child(2):hover::before,
-.list li:nth-child(3):hover::before,
-.list li:nth-child(4):hover::before,
-.list li:nth-child(5):hover::before {
-  content: "";
-  position: absolute;
-  bottom: 3px;
-  right: -7px;
-  width: 7px;
-  height: 7px;
-
-  border-bottom: 3px  solid var(--green);
-  border-right: 3px  solid var(--green);
-} */
-
-.list li:nth-child(6) {
-  margin: 0;
-}
-
-
-input[type="checkbox"] {
+/* input[type="checkbox"] {
   width: 100%;
   height: 100%;
   position: absolute;
@@ -139,11 +98,11 @@ input[type="checkbox"] {
   cursor: pointer;
   opacity: 0;
   z-index: 2;
-}
+} */
 
 
 /*__________________ [ Light-mode ] _________________________________________________________________*/
-.light-mode .navbar-header-logo a,
+/* .light-mode .navbar-header-logo a,
 .light-mode .list li a,
 .light-mode .menu-toggle {
   color: var(--black);
@@ -158,7 +117,7 @@ input[type="checkbox"] {
 
 .limenuRight a ion-icon {
   margin-right: 5px;
-}
+} */
 
 
 /*____________________________________________ [ Responsive styles ] ____________________*/
@@ -166,7 +125,7 @@ input[type="checkbox"] {
 
 }
 
-@media (max-width: 475px) {
+@media (max-width: 630px) {
   .menu-toggle {
     display: block;
     font-size: 16px;
@@ -175,6 +134,18 @@ input[type="checkbox"] {
     cursor: pointer;
     margin-right: 14px;
   }
+  .menu-navbar-right {
+    display: none;
+  }
+
+  .navbar {
+    display: flex;
+    justify-content: space-between;
+  }
+}
+
+@media (max-width: 475px) {
+
   .Light-mode .menu-toggle {
     color: var(--black);
   }
@@ -189,9 +160,7 @@ input[type="checkbox"] {
     padding-bottom: 64px;
 
   }
-  .menu-navbar-right {
-    display: none;
-  }
+
 
   .menu-navbar-right.open {
     width: 100vw;
