--- a/src/css/css2/style_project.css
+++ b/src/css/css2/style_project.css
@@ -9,6 +9,7 @@ ion-icon {
 }
 .main {
     min-height: 90vh;
+    margin-top: 36px;
 }
 
 .navbar {
@@ -189,10 +190,6 @@ img.preview {
 .mawh:hover {
     background-color: #ffbbf4;
 }
-
-
-
-
 
 .more_information_project {
     background: linear-gradient(120deg,#9abbf7 0,#ffbbf4 100%);
